# vibeship-spark-intelligence

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_PLAYBOOK.md  EIDOS_ARCHITECTURE_ADDITIONS.md  EIDOS_GUIDE.md  EVOLUTION_CHIPS_RESEARCH.md  ITERATION_PROJECTS.md  Intelligence_Flow.md  Intelligence_Flow_Map.md  LICENSE  META_RALPH.md  MoE_Plan.md  OPTIMIZATION_CHECKER.md  OSS_ONLY_MANIFEST.md  PRODUCTION_READINESS.md  PROJECT.md  README.md  REPO_HYGIENE.md  SECURITY.md  SEMANTIC_ADVISOR_DESIGN.md  SEMANTIC_INTELLIGENCE_PROPOSAL.md  SKILL.md  SOUL.md  SPARK_10_IMPROVEMENTS.md  SPARK_ACTIVATION_PROMPT.md  SPARK_LEARNING_GUIDE.md  SPARK_STORY_BIBLE.md  TUNEABLES.md  VIBESHIP_OPTIMIZER.md  agent_startup.md  bridge_worker.py  check_advisory.py  check_store.py  chips_tasks.md  cli.py  (+19 more)
adapters/: clawdbot_tailer.py  codex_hook_bridge.py  openclaw_tailer.py  stdin_ingest.py
benchmarks/: README.md  advisory_profile_sweeper.py  advisory_quality_ab.py  advisory_realism_bench.py  advisory_scoring_benchmark.py  build_advisory_cases_from_logs.py  comprehensive_pipeline_benchmark.py  emotion_memory_alignment_bench.py  memory_retrieval_ab.py  memory_retrieval_domain_matrix.py  run_benchmarks.py
chips/: bench-core.chip.yaml  biz-ops.chip.yaml  engagement-pulse.chip.yaml  game-dev.chip.yaml  market-intel.chip.yaml  marketing.chip.yaml  moltbook.chip.yaml  niche-intel.chip.yaml  social-convo.chip.yaml  spark-core.chip.yaml  vibecoding.chip.yaml  x-social.chip.yaml
config/: goals_example.yaml  learning_sources.yaml  release_sast_baseline.json  tuneables.json
docs/: ADVISORY_AND_LEARNING_BENCHMARKS.md  (+50 more)
mcp-servers/x-twitter-mcp/: LLM_CONTEXT.md  QUICKSTART.md  README.md  pyproject.toml  tweet.py
mcp-servers/x-twitter-mcp/docs/: AGENT_RULES.md
mcp-servers/x-twitter-mcp/src/x_twitter_mcp/: __init__.py  config.py  server.py
(+506 files in other folders)
