[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x-twitter-mcp"
version = "0.2.0"
description = "Enhanced X/Twitter MCP server with Playwright-based article fetching, engagement metrics, and article search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "VibeShip", email = "cem@seedify.fund" }
]
keywords = ["mcp", "twitter", "x", "claude", "ai", "playwright", "articles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=0.1.0",
    "tweepy>=4.14.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
articles = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "playwright>=1.40.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
x-twitter-mcp-server = "x_twitter_mcp:main"
x-twitter-mcp-http = "x_twitter_mcp.http_server:main"

[project.urls]
Homepage = "https://github.com/vibeforge1111/vibeship-spark-intelligence"
Repository = "https://github.com/vibeforge1111/vibeship-spark-intelligence"
Documentation = "https://github.com/vibeforge1111/vibeship-spark-intelligence/tree/main/mcp-servers/x-twitter-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/x_twitter_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]
